# nanahouse

./: .gitignore  ERRORS.md  docker-compose.yml  package.json
apps/backend/: .env.example  RBAC_README.md  README.md  pyproject.toml  pytest.ini
apps/backend/app/: main.py
apps/backend/app/api/v1/: auth.py  categories.py  products.py  router.py  users.py
apps/backend/app/core/: config.py  database.py  permissions.py  security.py
apps/backend/app/models/: category.py  product.py  product_variant.py  user.py
apps/backend/app/schemas/: auth.py  category.py  product.py
apps/backend/prisma/: dev.db  schema.prisma
apps/backend/prisma/migrations/20250930082721_add_user_fields/: migration.sql
apps/backend/prisma/migrations/20251013095539_add_category_tree/: migration.sql
apps/backend/prisma/migrations/20251013111029_add_product_model/: migration.sql
apps/backend/prisma/migrations/20251013111857_add_blog_models/: migration.sql
apps/backend/prisma/migrations/20251013112654_add_product_tag_relationship/: migration.sql
apps/backend/src/: cli.py  rbac_example.py
apps/backend/src/backend/: cli.py
apps/backend/src/backend/core/: config.py  security.py
apps/backend/src/backend/exceptions/: base.py
apps/backend/src/core/: auth_utils.py  config.py  db.py  decorators.py  rbac.py  security.py
apps/backend/src/core/controllers/: commons.py
apps/backend/src/core/services/: notify.py
apps/backend/src/interfaces/rest/: server.py
apps/backend/tests/: README.md  conftest.py  test_auth_api.py  test_health.py  test_integration.py  test_main.py  test_rbac_api.py  test_rbac_middleware.py  test_simple.py  test_test_api.py  test_users_api.py  test_utils.py
(+121 files in other folders)
